🐛 Fixed related books card not wrapping

--- a/_sass/_related-books.scss
+++ b/_sass/_related-books.scss
@@ -32,5 +32,14 @@
         display: flex;
         flex-direction: column;
         gap: .125rem;
+        overflow: hidden;
+        white-space: nowrap;
+
+        h3{
+            @extend .font-16;
+            margin-bottom: 0;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
     }
 }
